--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,16 @@
 		"redhat.vscode-xml",
 		"davidanson.vscode-markdownlint"
 	],
+	"runArgs": [
+		"-v",
+		"/var/run/docker.sock:/var/run/docker.sock"
+	],
 	"settings":{
 		"java.home": "/docker-java-home",
-		"terminal.integrated.shell.linux": "/bin/bash"
+		"terminal.integrated.shell.linux": "/bin/bash",
+		"remote.extensionKind": {
+			"peterjausovec.vscode-docker": "workspace"
+		}
 	}
+
 }
