--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 # Configuration file
 # key = value
+quarkus.native.enable-jni=true
+quarkus.native.additional-build-args=-H:+TraceClassInitialization
+org.acme.CountryService/mp-rest/url=https://restcountries.eu/rest
+org.acme.CountryService/mp-rest/scope=javax.inject.Singleton
