Add multi-stage docker build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ quarkus.native.enable-jni=true
 quarkus.native.additional-build-args=-H:+TraceClassInitialization
 org.acme.CountryService/mp-rest/url=https://restcountries.eu/rest
 org.acme.CountryService/mp-rest/scope=javax.inject.Singleton
+
+quarkus.log.level=INFO
