--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,43 +3,43 @@
 # Licensed under the MIT License. See LICENSE in the project root for license information.
 #-----------------------------------------------------------------------------------------
 
-FROM oracle/graalvm-ce:19.2.1
+FROM registry.redhat.io/quarkus/mandrel-21-jdk17-rhel8:21.3-18
 
-# install native-image component
-RUN gu install native-image
+USER root
 
-ENV GRAALVM_HOME=/opt/graalvm-ce-19.2.1
+RUN yum -y update && \
+    yum -y install git wget
+    # #
+    # # Allow for a consistant java home location for settings - image is changing over time
+    # && if [ ! -d "/docker-java-home" ]; then ln -s "${JAVA_HOME}" /docker-java-home; fi
 
-# Configure apt
-RUN yum update -y \
-    #
-    # Install git, process tools, lsb-release (common in install instructions for CLIs)
-    && yum -y install git procps wget \
-    #
-    # Allow for a consistant java home location for settings - image is changing over time
-    && if [ ! -d "/docker-java-home" ]; then ln -s "${JAVA_HOME}" /docker-java-home; fi
 
-# mvn
-ARG MAVEN_VERSION=3.6.1
-ARG USER_HOME_DIR="/root"
-ARG SHA=b4880fb7a3d81edd190a029440cdf17f308621af68475a4fe976296e71ff4a4b546dd6d8a58aaafba334d309cc11e638c52808a4b0e818fc0fd544226d952544
+# # install native-image component
+# RUN gu install native-image
+
+# ENV GRAALVM_HOME=/opt/graalvm-ce-19.2.1
+
+# Install tools
+
+# # mvn
+ARG MAVEN_VERSION=3.8.6
+# ARG USER_HOME_DIR="/root"
 ARG BASE_URL=https://apache.osuosl.org/maven/maven-3/${MAVEN_VERSION}/binaries
 
-RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
-  && curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
-  && echo "${SHA}  /tmp/apache-maven.tar.gz" | sha512sum -c - \
-  && tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1 \
-  && rm -f /tmp/apache-maven.tar.gz \
-  && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
+RUN mkdir -p /usr/share/maven /usr/share/maven/ref && \
+  curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz && \
+  tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1 && \
+  rm -f /tmp/apache-maven.tar.gz && \
+  ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
 
 ENV MAVEN_HOME /usr/share/maven
 ENV MAVEN_CONFIG "/workspaces/vscode-remote-quarkus/.m2"
 
 ADD settings.xml /usr/share/maven/conf/
 
-# docker
-RUN yum -y install docker-cli.x86_64
+# # docker
+# RUN yum -y install docker-cli.x86_64
 
-# bash config
-ADD .bashrc /root
+# # bash config
+# ADD .bashrc /root
 
