--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,10 @@
+// A launch configuration that compiles the extension and then opens it inside a new window
+// Use IntelliSense to learn about possible attributes.
+// Hover to view descriptions of existing attributes.
+// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 {
+    "version": "0.2.0",
     "configurations": [
-        {
-            "type": "java",
-            "name": "Launch App",
-            "request": "launch",
-            "cwd": "${workspaceFolder}",
-            "console": "internalConsole",
-            "stopOnEntry": false,
-            "mainClass": "org.acme",
-            "args": "",
-            "projectName": "code-with-quarkus"
-        },
         {
             "preLaunchTask": "quarkus:dev",
             "type": "java",
