Add non root user

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,14 +1,9 @@
-#-----------------------------------------------------------------------------------------
-# Copyright (c) Microsoft Corporation. All rights reserved.
-# Licensed under the MIT License. See LICENSE in the project root for license information.
-#-----------------------------------------------------------------------------------------
-
 FROM registry.redhat.io/quarkus/mandrel-21-jdk17-rhel8:21.3-18
 
 USER root
 
 RUN yum -y update && \
-    yum -y install git wget
+    yum -y install git wget sudo
     # #
     # # Allow for a consistant java home location for settings - image is changing over time
     # && if [ ! -d "/docker-java-home" ]; then ln -s "${JAVA_HOME}" /docker-java-home; fi
@@ -40,6 +35,19 @@ ADD settings.xml /usr/share/maven/conf/
 # # docker
 # RUN yum -y install docker-cli.x86_64
 
-# # bash config
-# ADD .bashrc /root
+ARG USERNAME=alitari
+ARG USER_UID=1000
+ARG USER_GID=$USER_UID
+
+# Create the user
+RUN groupadd --gid $USER_GID $USERNAME && \
+    useradd --uid $USER_UID --gid $USER_GID -m $USERNAME && \
+    echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME && \
+    chmod 0440 /etc/sudoers.d/$USERNAME
+
+
+# bash config
+ADD .bashrc /home/alitari
+
+USER $USERNAME
 
