--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
 	"name": "Quarkus",
 	"dockerFile": "Dockerfile",
-	"appPort": 8080,
+	"forwardPorts": [8080],
 	"extensions": [
 		"vscjava.vscode-java-pack",
 		"vscjava.vscode-maven",
